--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -40,6 +40,6 @@
     stripComponents = 1
     refreshPeriod = "168h"
 [".local/share/rofi/themes"]
-    type = "archive"
-    url = "https://github.com/lr-tech/rofi-themes-collection/archive/master.tar.gz"
+    type = "file"
+    url = "https://raw.githubusercontent.com/lr-tech/rofi-themes-collection/master/themes/rounded-gray-dark.rasi"
     refreshPeriod = "168h"
